#217 Remove if condition and fix immutable list bug.